<resources>
    <string name="app_name">glamping</string>
    <string name="underlined_text"><u>Underlined Text</u></string>
    <string name="registerTitle">Finish Register</string>
    <string name="username">Username</string>
    <string name="lastName">Last Name</string>
    <string name="firstName">First Name</string>
    <string name="username_subtext">Ensure using your real name as on your identification documents.</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob_subtext">To register, you must be at least 16 years old. Other app users will not be able to see your date of birth.</string>
    <string name="phone">Phone</string>
    <string name="hint_phone">Phone</string>
    <string name="address">Address</string>
    <string name="hint_country">Country</string>
    <string name="hint_address">Address</string>
    <string name="email">Email</string>
    <string name="email_subtext">The app will send a camp booking confirmation notification to this email.</string>
    <string name="continue_btn">Continue</string>
    <string name="verificationTitle">Account Verification</string>
    <string name="verificationCodeDescription">Enter the code we sent to your email address. ex······@gm······.com.</string>
    <string name="verificationCodeHint">Verification Code</string>
    <string name="verificationCodeSubtext">Didn\'t receive the email?</string>
    <string name="tryAgainSubtext">Try Again</string>
    <string name="bookingRequestTitle">Booking Requests</string>
    <string name="customer_name_title">Customer Name:</string>
    <string name="customer_name">Tân Thịnh</string>
    <string name="start_date_title">Start Date:</string>
    <string name="end_date_title">End Date:</string>
    <string name="end_date">Tue 11-02-2025</string>
    <string name="start_date">Tue 11-02-2025</string>
    <string name="status_title">Status:</string>
    <string name="customer_detail">Customer Information</string>
    <string name="full_name_title">Full Name:</string>
    <string name="phone_title">Phone Number</string>
    <string name="customer_detail_phone">0903756192</string>
    <string name="customer_detail_email_title">Email</string>
    <string name="customer_detail_email">example@gmail.com</string>
    <string name="booking_detail_title">Booking Information</string>
    <string name="booking_code_title">Booking Code</string>
    <string name="booking_code">XXXXXXX%02d</string>
    <string name="booking_detail_create_date_title">Booking Created On</string>
    <string name="booking_detail_create_date">2025-02-12 12:10:00</string>
    <string name="booking_detail_start_date_title">Check-in Date</string>
    <string name="booking_detail_start_date">2025-02-13</string>
    <string name="booking_detail_end_date">2025-02-13</string>
    <string name="booking_detail_deposit_date_title">Deposit Date</string>
    <string name="booking_detail_deposit_date">2025-02-12 12:10:00</string>
    <string name="price_format">%1$.2fđ</string>
    <string name="capacity_format">%1$d People</string>
    <string name="camps_format">%1$d camps</string>
    <string name="service_price_format">%1$s/person</string>
    <string name="booking_total_format">%1$.2fđ</string>
    <string name="booking_user_name">%1$s %2$s</string>
    <string name="camp_type_title">Camp Type</string>
    <string name="service_title">Service</string>
    <string name="card_booking_date">2025-03-14 • 2025-03-15</string>
    <string name="card_booking_date_format">%s • %s</string>
</resources>
