<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bookingCard"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="12dp"
    app:cardElevation="4dp"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:backgroundTint="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:padding="15dp">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/image_placeholder"
                app:shapeAppearanceOverlay="@style/roundedImageStyle"
                android:scaleType="centerCrop"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/customer_name_title"
                    android:alpha="0.7"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/customer_name"
                    android:text="@string/customer_name"
                    style="@style/bookingDetailText"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_title"
                    android:alpha="0.7"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/start_date"
                    android:text="@string/start_date"
                    style="@style/bookingDetailText"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/end_date_title"
                    android:alpha="0.7"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/end_date"
                    android:text="@string/end_date"
                    style="@style/bookingDetailText"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/status_title"
                    android:alpha="0.7"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/status"
                    android:text="Chờ xử lý"
                    style="@style/bookingDetailText"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2">
                <TextView
                    android:id="@+id/total"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="1.500.000VNĐ"
                    style="@style/h2"
                    android:textAlignment="center"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
