<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="@id/guidelineLeft"
        app:layout_constraintEnd_toStartOf="@id/guidelineRight"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_arrow"
                android:background="@drawable/ripple_effect"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:contentDescription="Go back"/>


            <TextView
                android:id="@+id/registerTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificationTitle"
                style="@style/h3"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verificationCodeDescription"
                style="@style/h2"
                android:textStyle="bold"
                android:layout_marginTop="20dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:hint="@string/verificationCodeHint"
                style="@style/editTextLayout"
                android:labelFor="@id/editTextLastName"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextVerificationCode"
                    style="@style/editText"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verificationCodeSubtext"
                    android:alpha="0.5"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tryAgainSubtext"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"/>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/continueBtn"
                android:layout_marginTop="10dp"
                android:layout_height="70dp"
                android:layout_width="match_parent"
                android:text="@string/continue_btn"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:backgroundTint="@color/black"
                android:layout_marginBottom="20dp"
                app:cornerRadius="8dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>




    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />
</androidx.constraintlayout.widget.ConstraintLayout>